; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_getchar.c_char_avail.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_getchar.c_char_avail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@no_mapping = common dso_local global i32 0, align 4
@NUL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @char_avail() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @no_mapping, align 4
  %3 = add nsw i32 %2, 1
  store i32 %3, i32* @no_mapping, align 4
  %4 = call i32 (...) @vpeekc()
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* @no_mapping, align 4
  %6 = add nsw i32 %5, -1
  store i32 %6, i32* @no_mapping, align 4
  %7 = load i32, i32* %1, align 4
  %8 = load i32, i32* @NUL, align 4
  %9 = icmp ne i32 %7, %8
  %10 = zext i1 %9 to i32
  ret i32 %10
}

declare dso_local i32 @vpeekc(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
